--- a/app/views/pets/index.html.erb
+++ b/app/views/pets/index.html.erb
@@ -1,15 +1,15 @@
 <div class="container">
-  <div class="row text-center">
-    <div class="col-12 col-sm-4 offset-sm-3">
-      <h1>List of pets</h1>
+  <div class="row text-center mt-3">
+    <div class="col-12">
+      <h1>List of pets 🐶</h1>
     </div>
   </div>
 
-  <div class="row justify-content-center">
+  <div class="row justify-content-center my-3 text-center">
     <div class="card" style="width: 18rem;">
       <ul class="list-group list-group-flush">
         <% @pets.each do |pet| %>
-          <li><%= link_to pet.name, pet_path(pet), class: "list-group-item", style: 'text-decoration: none' %></li>
+          <li class="list-group-item"><%= link_to pet.name, pet_path(pet) %></li>
         <% end %>
       </ul>
     </div>
